scratch
Semantic Analysis [1304] mulWide... [36D[0K[1massets/zig-code/features/12-errors-as-values.zig:5:30: [31;1merror: [0m[1merror is discarded
[0m    _ = std.fs.cwd().openFile("does_not_exist/foo.txt", .{});
        [32;1m~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[0m[1massets/zig-code/features/12-errors-as-values.zig:5:30: [36;1mnote: [0m[1mconsider using `try`, `catch`, or `if`
[0m[0m[2mreferenced by:
    comptime_0: /Users/kristoff/Documents/zig/build/stage3/lib/zig/std/start.zig:59:50
    remaining reference traces hidden; use '-freference-trace' to see all reference traces

[0m